<resources>
    <string name="app_name">HakaTicket</string>
    <string name="titremenuconnexion">Receipter</string>
    <string name="titredescriptionconnexion">Bienvenue sur l’application Receipter Veuillez vous connecter pour y accéder</string>
    <string name="labelusername">mail/nom d\'utilisateur</string>
    <string name="labelpassword">mot de passe</string>
    <string name="boutonconnexion">se connecter</string>
    <string name="textbasdepage">Vous n’êtes pas encore inscrits ?</string>
    <string name="lieninscription">Inscrivez-vous ici</string>
    <string name="titremenuinscription">Inscription</string>
    <string name="labelsaisiemail">Adresse mail</string>
    <string name="labelprenom">prénom</string>
    <string name="labelnom">nom</string>
    <string name="labelverification">Vérification MDP</string>
    <string name="boutoninscrire">S\'inscrire</string>
    <string name="textecgu">En cochant cette case, je m’engage à respecter les conditions Générales d’utilisation et la politique de confidentialité</string>
    <string name="mestickets">Mes tickets</string>
    <string name="scanner">Scanner un qr code</string>
    <string name="compte">Accéder à mon compte</string>

    <string name="titremenuscan">Scan</string>
    <string name="labelpseudo">pseudo</string>
    <string name="cgutexte">Conditions générales d\'utilisation En vigueur au 06/02/2020   Les présentes conditions générales d\'utilisation (dites « CGU ») ont pour objet l\'encadrement juridique des modalités de mise à disposition du site et des services par et de définir les conditions d’accès et d’utilisation des services par « l\'Utilisateur ». Les présentes CGU sont accessibles sur le site à la rubrique «CGU». Toute inscription ou utilisation du site implique l\'acceptation sans aucune réserve ni restriction des présentes CGU par l’utilisateur. Lors de l\'inscription sur le site via le Formulaire d’inscription, chaque utilisateur accepte expressément les présentes CGU en cochant la case précédant le texte suivant : « ​Je reconnais avoir lu et compris les CGU et je les accepte ​ ». En cas de non-acceptation des CGU stipulées dans le présent contrat, l\'Utilisateur se doit de renoncer à l\'accès des services proposés par le site. www.hackaticket.com ​ se réserve le droit de modifier unilatéralement et à tout moment le contenu des présentes CGU. \n\n Article 1 : Les mentions légales \n\n L’édition et la direction de la publication du site www.hackaticket.com est assurée par l’équipe Hackaticket , domicilié à Chepniers 17210, 21 pont de l’houmade​. Numéro de téléphone est 01 23 45 67 89 Adresse e-mail hackaticket@gmail.com. L\'hébergeur du site www.hackaticket.com est la société OVH, dont le siège social est situé au ​19 Place Françoise Dorin, 75017​ Paris​, avec le numéro de téléphone : ​09 55 00 66 33​. \n\n ARTICLE 2 : Accès au site \n\n Le site www.hackaticket.com permet à l\'Utilisateur un accès gratuit aux services suivants : Délivrer une preuve d’achat dématérialisé et sécurisé. Le site est accessible gratuitement en tout lieu à tout Utilisateur ayant un accès à Internet. Tous les frais supportés par l\'Utilisateur pour accéder au service (matériel informatique, logiciels, connexion Internet, etc.) sont à sa charge. L’Utilisateur non membre n\'a pas accès aux services réservés. Pour cela, il doit s’inscrire en remplissant le formulaire. En acceptant de s’inscrire aux services réservés, l’Utilisateur membre s’engage à fournir des informations sincères et exactes concernant son état civil et ses coordonnées, notamment son adresse email. Pour accéder aux services, l’Utilisateur doit ensuite s\'identifier à l\'aide de son identifiant et de son mot de passe qui lui seront communiqués après son inscription. Tout Utilisateur membre régulièrement inscrit pourra également solliciter sa désinscription en se rendant à la page dédiée sur son espace personnel. Celle-ci sera effective dans un délai raisonnable. Tout événement dû à un cas de force majeure ayant pour conséquence un dysfonctionnement du site ou serveur et sous réserve de toute interruption ou modification en cas de maintenance, n\'engage pas la responsabilité de www.hackaticket.com. ​ Dans ces cas, l’Utilisateur accepte ainsi ne pas tenir rigueur à l’éditeur de toute interruption ou suspension de service, même sans préavis.  L\'Utilisateur a la possibilité de contacter le site par messagerie électronique à l’adresse email de l’éditeur communiqué à l’ARTICLE 1. \n\n ARTICLE 3 : Collecte des données \n\n Le site assure à l\'Utilisateur une collecte et un traitement d\'informations personnelles dans le respect de la vie privée conformément à la loi n°78-17 du 6 janvier 1978 relative à l\'informatique, aux fichiers et aux libertés. Le site est déclaré à la CNIL sous le numéro ​166513208334. En vertu de la loi Informatique et Libertés, en date du 6 janvier 1978, l\'Utilisateur dispose d\'un droit d\'accès, de rectification, de suppression et d\'opposition de ses données personnelles. L\'Utilisateur exerce ce droit : · par mail à l\'adresse mail ​hackaticket@gmail.com · via son espace personnel ; \n\n ARTICLE 4 : Propriété intellectuelle \n\n Les marques, logos, signes ainsi que tous les contenus du site (textes, images, son…) font l\'objet d\'une protection par le Code de la propriété intellectuelle et plus particulièrement par le droit d\'auteur. L\'Utilisateur doit solliciter l\'autorisation préalable du site pour toute reproduction, publication, copie des différents contenus. Il s\'engage à une utilisation des contenus du site dans un cadre strictement privé, toute utilisation à des fins commerciales et publicitaires est strictement interdite. Toute représentation totale ou partielle de ce site par quelque procédé que ce soit, sans l’autorisation expresse de l’exploitant du site Internet constituerait une contrefaçon sanctionnée par l’article L 335-2 et suivants du Code de la propriété intellectuelle. Il est rappelé conformément à l’article L122-5 du Code de propriété intellectuelle que l’Utilisateur qui reproduit, copie ou publie le contenu protégé doit citer l’auteur et sa source.  \n\n ARTICLE 5 : Responsabilité \n\n Les sources des informations diffusées sur le site www.hackaticket.com sont réputées fiables mais le site ne garantit pas qu’il soit exempt de défauts, d’erreurs ou d’omissions. Les informations communiquées sont présentées à titre indicatif et général sans valeur contractuelle. Malgré des mises à jour régulières, le site ​www.hackaticket.com ​ ne peut être tenu responsable de la modification des dispositions administratives et juridiques survenant après la publication. De même, le site ne peut être tenue responsable de l’utilisation et de l’interprétation de l’information contenue dans ce site. L\'Utilisateur s\'assure de garder son mot de passe secret. Toute divulgation du mot de passe, quelle que soit sa forme, est interdite. Il assume les risques liés à l\'utilisation de son identifiant et mot de passe. Le site décline toute responsabilité. Le site ​www.hackaticket.com ​ ne peut être tenu pour responsable d’éventuels virus qui pourraient infecter l’ordinateur ou tout matériel informatique de l’Internaute, suite à une utilisation, à l’accès, ou au téléchargement provenant de ce site. La responsabilité du site ne peut être engagée en cas de force majeure ou du fait imprévisible et insurmontable d\'un tiers.  \n\n  ARTICLE 6 : Liens hypertextes \n\n Des liens hypertextes peuvent être présents sur le site. L’Utilisateur est informé qu’en cliquant sur ces liens, il sortira du site ​www.hackaticket.com. ​ Ce dernier n’a pas de contrôle sur les pages web sur lesquelles aboutissent ces liens et ne saurait, en aucun cas, être responsable de leur contenu. \n\n ARTICLE 7 : Cookies \n\n L’Utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation. Les cookies sont de petits fichiers stockés temporairement sur le disque dur de l’ordinateur de l’Utilisateur par votre navigateur et qui sont nécessaires à l’utilisation du site ​www.hackaticket.com ​ . Les cookies ne contiennent pas d’information personnelle et ne peuvent pas être utilisés pour identifier quelqu’un. Un cookie contient un identifiant unique, généré aléatoirement et donc anonyme. Certains cookies expirent à la fin de la visite de l’Utilisateur, d’autres restent. L’information contenue dans les cookies est utilisée pour améliorer le site ​www.hackaticket.com ​ . En naviguant sur le site, L’Utilisateur les accepte. L’Utilisateur pourra désactiver ces cookies par l’intermédiaire des paramètres figurant au sein de son logiciel de navigation. \n\n ARTICLE 8 : Droit applicable et juridiction compétente \n\n La législation française s\'applique au présent contrat. En cas d\'absence de résolution amiable d\'un litige né entre les parties, les tribunaux français seront seuls compétents pour en connaître. Pour toute question relative à l’application des présentes CGU, vous pouvez joindre l’éditeur aux coordonnées inscrites à l’ARTICLE 1.</string>
    <string name="acceptcgu">J\'accepte les CGU</string>
    <string name="TitreMenuConnexion">Receipter</string>
    <string name="TitreDescriptionConnexion">Bienvenue sur l’application Receipter Veuillez vous connecter pour y accéder</string>
    <string name="labelMDP">Mot de passe</string>
    <string name="historiqueTitre">Historique</string>
    <string name="TitreMenuParametre">Mon Compte</string>
    <string name="boutonDeconnexion">Déconnexion</string>

    <string name="group1">Group1</string>
    <string name="group2">Group2</string>
    <string name="group3">Group3</string>
    <string name="group4">Group4</string>
    <string name="group5">Group5</string>
    <string name="textdropdowndate">Choisir une date</string>


    <string-array name="group1">
        <item>item1</item>
    </string-array>

    <string-array name="group2">
        <item>item1</item>
        <item>item2</item>
    </string-array>

    <string-array name="group3">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
    </string-array>

    <string-array name="group4">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>

    <string-array name="group5">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
    </string-array>


    <string-array name="type">
        <item>carte bleu</item>
        <item>especes</item>
    </string-array>
</resources>
