<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bks.colibriCorporation.hakaticket.LoginActivity">


    <include android:id="@+id/headerlogin"
       layout="@layout/sample_header"/>

    <TextView
        android:id="@+id/textDescriptionConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="@font/fjalla_one"
        android:text="@string/titredescriptionconnexion"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textAlignment="center"
        android:layout_below="@id/headerlogin"
        android:layout_marginTop="80dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDescriptionConnexion"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:id="@+id/layoutsaisieconnexion">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saisieidentifiantlogin"
            app:errorEnabled="true"
            app:counterEnabled="false"
            app:counterMaxLength="100">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelusername" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saisiemdplogin"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:counterEnabled="false"
            app:counterMaxLength="100">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/labelpassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/boutonconnexion"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/boutonconnexion"
        android:shadowColor="@color/black"
        android:textSize="20sp"
        android:background="@drawable/rectanglearrondi"
        android:layout_below="@id/layoutsaisieconnexion"
        android:layout_centerInParent="true"
        app:fontFamily="@font/fjalla_one" />

    <LinearLayout
        android:id="@+id/inscriptionlinklayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:layout_below="@id/boutonconnexion"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/textbasdepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowRadius="@color/black"
            android:text="@string/textbasdepage"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/fjalla_one" />

        <TextView
            android:id="@+id/lieninscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowRadius="@color/black"
            android:text="@string/lieninscription"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:fontFamily="@font/fjalla_one"
            android:clickable="true"/>

    </LinearLayout>
</RelativeLayout>


