<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include android:id="@+id/headerlogin"
        layout="@layout/sample_header"/>

    <ImageView
        android:id="@+id/rectangleDroit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/textpassword"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangledroit"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textusername" />

    <EditText
        android:id="@+id/textpassword2"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangledroit"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textpassword" />

    <EditText
        android:id="@+id/textpassword3"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangledroit"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textpassword2" />

    <TextView
        android:id="@+id/labelnom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/labelnom"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textpassword"
        app:layout_constraintEnd_toStartOf="@+id/textpassword"
        app:layout_constraintTop_toTopOf="@+id/textpassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="1dp"
        android:text="@string/labelpassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textpassword2"
        app:layout_constraintEnd_toStartOf="@+id/textpassword2"
        app:layout_constraintTop_toTopOf="@+id/textpassword2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/labelverification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/labelverification"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textpassword3"
        app:layout_constraintEnd_toStartOf="@+id/textpassword3"
        app:layout_constraintTop_toTopOf="@+id/textpassword3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/textusername"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangledroit"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textusername2" />


    <EditText
        android:id="@+id/textusername2"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/rectangledroit"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangleDroit" />

    <TextView
        android:id="@+id/labelprenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/labelprenom"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textusername"
        app:layout_constraintEnd_toStartOf="@+id/textusername"
        app:layout_constraintTop_toTopOf="@+id/textusername"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/labelsaisiemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="1dp"
        android:text="@string/labelsaisiemail"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textusername2"
        app:layout_constraintEnd_toStartOf="@+id/textusername2"
        app:layout_constraintTop_toTopOf="@+id/textusername2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/boutoninscrire"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rectanglearrondi"
        android:shadowColor="@color/black"
        android:text="@string/boutoninscrire"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="296dp"
        android:layout_height="56dp"
        android:layout_marginBottom="120dp"
        android:text="@string/textecgu"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/boutoninscrire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


